Commit after gender issue fix

--- a/UberNewDriver/Base.lproj/Main_iPhone.storyboard
+++ b/UberNewDriver/Base.lproj/Main_iPhone.storyboard
@@ -1408,8 +1408,8 @@
                                 <rect key="frame" x="0.0" y="64" width="320" height="537"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" highlighted="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="VMo-XK-WdW" userLabel="btnFB">
-                                        <rect key="frame" x="132" y="15" width="56" height="56"/>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" highlighted="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="VMo-XK-WdW" userLabel="btnFB">
+                                        <rect key="frame" x="115" y="15" width="56" height="56"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
@@ -1424,8 +1424,8 @@
                                             <action selector="faceBookBtnPressed:" destination="E6j-1g-f48" eventType="touchUpInside" id="bqg-sP-AIY"/>
                                         </connections>
                                     </button>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" highlighted="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="3YT-Lt-TdG" userLabel="btnGplus">
-                                        <rect key="frame" x="167" y="15" width="56" height="56"/>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" highlighted="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="3YT-Lt-TdG" userLabel="btnGplus">
+                                        <rect key="frame" x="150" y="15" width="56" height="56"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
@@ -2713,10 +2713,10 @@
                                 <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="60" id="U7r-2E-Xvf" customClass="HistoryCell">
-                                        <rect key="frame" x="0.0" y="55.5" width="320" height="60"/>
+                                        <rect key="frame" x="0.0" y="56" width="320" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="U7r-2E-Xvf" id="7er-qz-wuX">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="userimage.png" id="Bxy-FJ-2UI">
@@ -3435,7 +3435,7 @@ AAAAAAAAAAAAP6c
         <simulatedScreenMetrics key="destination" type="retina4_0.fullscreen"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="J13-g8-ERE"/>
+        <segue reference="9qz-Kl-zbb"/>
         <segue reference="65j-RC-JpO"/>
     </inferredMetricsTieBreakers>
 </document>
