--- a/UberNewDriver/Base.lproj/Main_iPhone.storyboard
+++ b/UberNewDriver/Base.lproj/Main_iPhone.storyboard
@@ -31,7 +31,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_splash" id="aTC-kH-PQ8">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_splash" id="aTC-kH-PQ8">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
@@ -3105,7 +3105,7 @@
         <image name="bg_bill" width="320" height="175"/>
         <image name="bg_name" width="320" height="32"/>
         <image name="bg_profile" width="320" height="108"/>
-        <image name="bg_splash" width="320" height="480"/>
+        <image name="bg_splash" width="340" height="480"/>
         <image name="bg_splash_h" width="320" height="568"/>
         <image name="bill_paper" width="24" height="32"/>
         <image name="btn_facebook" width="56" height="56"/>
